--- a/StACS.OpenAudit.Core/StACS.OpenAudit.Core.csproj
+++ b/StACS.OpenAudit.Core/StACS.OpenAudit.Core.csproj
@@ -2,4 +2,9 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
   </PropertyGroup>
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="7.5.2" />
+    <PackageReference Include="LiteGuard" Version="2.0.1" />
+    <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
+  </ItemGroup>
 </Project>
