--- a/StACS.OpenAudit.Core/StACS.OpenAudit.Core.csproj
+++ b/StACS.OpenAudit.Core/StACS.OpenAudit.Core.csproj
@@ -1,10 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.2</LangVersion>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="7.5.2" />
     <PackageReference Include="LiteGuard" Version="2.0.1" />
     <PackageReference Include="System.ComponentModel.Annotations" Version="4.4.1" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Attributes" />
   </ItemGroup>
 </Project>
