--- a/StACS.OpenAudit.Client/StACS.OpenAudit.Client.csproj
+++ b/StACS.OpenAudit.Client/StACS.OpenAudit.Client.csproj
@@ -1,5 +1,9 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Version>0.0.0.0</Version>
   </PropertyGroup>
+  <ItemGroup>
+    <DotNetCliToolReference Include="dotnet-setversion" Version="1.0.3" />
+  </ItemGroup>
 </Project>
