--- a/StACS.OpenAudit.Client/StACS.OpenAudit.Client.csproj
+++ b/StACS.OpenAudit.Client/StACS.OpenAudit.Client.csproj
@@ -1,7 +1,17 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <LangVersion>7.2</LangVersion>
     <Version>0.0.0.0</Version>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <AssemblyVersion>0.0.0.0</AssemblyVersion>
+    <FileVersion>0.0.0.0</FileVersion>
+    <Authors>Jason N Haffey</Authors>
+    <Company />
+    <PackageProjectUrl>https://github.com/jnhaffey/StACS.OpenAudit</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/jnhaffey/StACS.OpenAudit</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageTags>Audit</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <DotNetCliToolReference Include="dotnet-setversion" Version="1.0.3" />
