--- a/StACS.OpenAudit.Core/StACS.OpenAudit.Core.csproj
+++ b/StACS.OpenAudit.Core/StACS.OpenAudit.Core.csproj
@@ -2,7 +2,16 @@
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
     <LangVersion>7.2</LangVersion>
-    <Version>0.0.0</Version>
+    <Version>0.0.0.0</Version>
+    <GeneratePackageOnBuild>false</GeneratePackageOnBuild>
+    <AssemblyVersion>0.0.0.0</AssemblyVersion>
+    <FileVersion>0.0.0.0</FileVersion>
+    <Authors>Jason N Haffey</Authors>
+    <Company />
+    <PackageProjectUrl>https://github.com/jnhaffey/StACS.OpenAudit</PackageProjectUrl>
+    <RepositoryUrl>https://github.com/jnhaffey/StACS.OpenAudit</RepositoryUrl>
+    <RepositoryType>GitHub</RepositoryType>
+    <PackageTags>Audit</PackageTags>
   </PropertyGroup>
   <ItemGroup>
     <PackageReference Include="FluentValidation" Version="7.5.2" />
